--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -308,3 +308,11 @@ a {
     margin-left: 40px;
 }
 
+/*loader*/
+.loader__wrapper{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 150px;
+}
+
