--- a/src/components/popup/popup.css
+++ b/src/components/popup/popup.css
@@ -19,6 +19,8 @@
     padding: 20px;
     border-radius: 5px;
     display: flex;
+    flex-direction: column;
+    margin: 0 auto;
     box-shadow: rgba(50, 50, 93, 0.25) 0 13px 27px -5px, rgba(0, 0, 0, 0.3) 0 8px 16px -8px;
 }
 
@@ -59,7 +61,7 @@
 /*fade*/
 .fade-enter {
     opacity: 0;
-    transform: scale(0.9);
+    transform: scale(0.7);
 }
 .fade-enter-active {
     opacity: 1;
@@ -71,6 +73,6 @@
 }
 .fade-exit-active {
     opacity: 0;
-    transform: scale(0.9);
+    transform: scale(0.7);
     transition: opacity 300ms, transform 300ms;
 }
