--- a/src/components/utils/popup/popup.css
+++ b/src/components/utils/popup/popup.css
@@ -45,13 +45,10 @@
 }
 
 .popup-close{
-    padding: 10px;
     position: absolute;
-    width: 30px;
-    height: 30px;
     cursor: pointer;
-    top: 0;
-    right: 0;
+    top: 10px;
+    right: 10px;
     transition: color .3s ease-in-out;
 }
 .popup-close:hover{
