--- a/src/components/headers/header.css
+++ b/src/components/headers/header.css
@@ -12,12 +12,7 @@
 }
 
 .header__input {
-    margin-left: 20px;
-    margin-right: auto;
-    border-radius: 20px;
-    border: 1px solid #cccccc;
-    font-size: 20px;
-    padding: 10px;
+    margin: 0 auto 0 10px;
 }
 
 .header__button {
@@ -32,6 +27,8 @@
 @media screen and (max-width: 800px) {
     .header {
         flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
     }
     .header__location-name{
         margin-bottom: 10px;
