--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -71,6 +71,8 @@
 
 @media screen and (max-width: 800px) {
     .project-info-header {
-        flex-wrap: wrap;
+       flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
     }
 }
