sidebar code cleaned and photos grouped by day of uploading

--- a/src/components/UI/forms/forms.css
+++ b/src/components/UI/forms/forms.css
@@ -118,6 +118,10 @@
     margin-bottom: 20px;
 }
 
+.form__info{
+    text-align: center;
+}
+
 @media screen and (max-width: 800px){
     .form-wrapper{
         padding: 20px;
