--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ a {
     justify-content: center;
     align-items: center;
     margin-top: 100px;
+    text-align: center;
 }
 
 #root {
@@ -117,24 +118,26 @@ a {
 
 .preview__photos{
     display: flex;
-    justify-content: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 360px;
 }
 
 .preview__photo{
-    max-width: 150px;
-    width: 100%;
+    flex: 1 0 calc(33% - 20px);
+    max-width: 100px;
+    max-height: 100px;
     height: auto;
     border-radius: 5px;
-    margin-left: 20px;
+    margin-right: 20px;
     object-fit: cover;
+    margin-bottom: 20px;
 }
 
 
 .info-header{
     margin: 20px;
 }
-
-
 
 /*images*/
 .images-container{
