--- a/src/components/settings/index.module.css
+++ b/src/components/settings/index.module.css
@@ -5,6 +5,10 @@
     height: 100%;
 }
 
+.form {
+    max-width: 1200px;
+}
+
 .subtitle {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
