--- a/src/components/settings/settingsUI/index.module.css
+++ b/src/components/settings/settingsUI/index.module.css
@@ -46,6 +46,7 @@
 
 .button{
     position: relative;
+    overflow: hidden;
     composes: label;
     border: 1px solid #cbd5e1;
     background: white;
