company users page added

--- a/src/components/UI/forms/forms.css
+++ b/src/components/UI/forms/forms.css
@@ -96,19 +96,37 @@
     outline: 0;
     padding: 10px 50px 10px;
     box-shadow: none;
-    margin: 20px 0 20px;
     overflow: hidden;
     transition: all .1s ease-in-out;
     border: 1px solid black;
+    max-height: 60px;
+    margin: 20px 0;
+}
+
+.form__button.green{
+    background: #154d3b;
+    border: 1px solid #154d3b;
 }
 
 .form__button:hover, .form__button:focus{
     color: black;
-    background: #a4b4b9;
+    background: white;
     border: 1px solid #a4b4b9;
 }
 .form__button:disabled{
     cursor: not-allowed;
+}
+
+.form__button__content{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.form__button.sm{
+    padding: 0 30px;
+    max-height: 40px;
+    font-size: 14px;
 }
 
 
