--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ main {
     --light-brown: #F5DF99;
     --light-red:#FF5D5D;
     --text-primary: #2B283A;
+    --shadow: 0 1px 1px rgb(20 35 52 / 3%), 0 1px 3px rgb(20 35 52 / 4%), 0 2px 7px rgb(20 35 52 / 5%), 0 6px 24px rgb(20 35 52 / 7%);
 }
 
 button {
@@ -56,7 +57,7 @@ a {
     color: #2B283A;
 }
 .shadow_wrapper{
-    box-shadow: 0 1px 1px rgb(20 35 52 / 3%), 0 1px 3px rgb(20 35 52 / 4%), 0 2px 7px rgb(20 35 52 / 5%), 0 6px 24px rgb(20 35 52 / 7%);
+    box-shadow: var(--shadow);
     border-radius: 20px;
 }
 
@@ -65,7 +66,7 @@ a {
     align-items: center;
     padding: 10px;
     margin: 20px;
-    box-shadow: 0 1px 1px rgb(20 35 52 / 3%), 0 1px 3px rgb(20 35 52 / 4%), 0 2px 7px rgb(20 35 52 / 5%), 0 6px 24px rgb(20 35 52 / 7%);
+    box-shadow: var(--shadow);
     border-radius: 20px;
 }
 
