--- a/src/components/companyUsers/index.module.css
+++ b/src/components/companyUsers/index.module.css
@@ -1,5 +1,11 @@
 .container {
     margin: 50px 10px 0;
+    max-width: 1200px;
+}
+
+.users {
+    display: flex;
+    gap: 20px;
 }
 
 .row {
@@ -10,6 +16,9 @@
     padding: 10px;
     margin-bottom: 5px;
     cursor: pointer;
+
+    width: 350px;
+    box-shadow: var(--shadow);
 }
 .row:hover{
     box-shadow: var(--shadow);
