--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -189,21 +189,27 @@ a {
     }
 }
 
-@media screen and (max-width: 1500px) {
-    html {
-        font-size: 13px;
+@media screen and (max-width: 1800px) {
+    body {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    body {
+        font-size: 14px;
     }
 }
 
 @media screen and (max-width: 1200px) {
-    html {
+    body {
         font-size: 12px;
     }
 }
 
 @media screen and (max-width: 900px) {
-    html {
-        font-size: 11px;
+    body {
+        font-size: 10px;
     }
 }
 
