new api changes

--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -47,6 +47,10 @@
     font-size: 16px;
     background-color: $primary;
   }
+
+  &.opened {
+    max-width: 50px;
+  }
 }
 
 .nav__item:hover, .nav__hidden__icon:hover {
