--- a/src/components/UI/forms/form.module.scss
+++ b/src/components/UI/forms/form.module.scss
@@ -11,7 +11,7 @@
   font-size: 18px;
   font-weight: 400;
   outline: 0;
-  padding: 10px 50px 10px;
+  padding: 0.625rem 3.125rem 0.625rem;
   box-shadow: none;
   overflow: hidden;
   transition: background .3s ease-in-out;
