--- a/src/components/companyUsers/Header/index.module.css
+++ b/src/components/companyUsers/Header/index.module.css
@@ -1,6 +1,6 @@
 .title{
     margin-left: 10px;
-    font-size: 32px;
+    font-size: 2.813rem;
     color: var(--text-primary);
     font-weight: 600;
 }
