--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,11 +7,29 @@ html, body {
     margin: 0;
     font-size: 16px;
 }
+@media screen and (max-width: 1500px) {
+    html {
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    html {
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    html {
+        font-size: 11px;
+    }
+}
 
 main {
     width: 100%;
     min-height: 100vh;
     padding: 1rem 2rem;
+    background: #EFEFEF;
 }
 
 #root{
