new api changes for photos mainly

--- a/src/components/headers/header.css
+++ b/src/components/headers/header.css
@@ -20,7 +20,7 @@
     overflow: hidden;
     color: white;
     cursor: pointer;
-    background-color: #154d3b;
+    background-color: #C73E1D;
     z-index: 1;
 }
 
